# TwitFix

./: .dockerignore  .gitignore  Dockerfile  config.py  gwsgi.py  link_cache.py  notable_donations.md  pyproject.toml  readme.md  statistics.md  twitfix.py
deploy/gcp/: .gitignore  main.tf  readme.md  template.json  template.tfvars
deploy/here/: cleanup.sh  deploy.sh
deploy/local/: docker-compose.yml
scripts/: create_qa_tweets.py
src/: Dockerfile  pyproject.toml
src/static/: main.js  style.css
src/templates/: image.html  index.html  inline.html  text.html  video.html
src/twitfix/: cloud_logging.py  config.py  exceptions.py  gwsgi.py  link_cache.py  routes.py  sanic_jinja.py  stats_module.py  storage_module.py  twitfix_app.py  twitfix_debug.py  twitfix_stats.py  twitfix_toys.py  twitter_api.py  wsgi.py
static/: main.js  style.css
