[tool.poetry]
name = "twitfix"
version = "0.1.0"
description = ""
authors = ["robinuniverse"]
include = [
    "static/*",
    "templates/*",
]

[tool.poetry.dependencies]
python = "^3.8"
youtube_dl = "^2021.12.17"
twitter = "^1.19.3"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"

# Local server deployment optionals
pymongo = { version = "^4.0.2", optional=true }
uWSGI = { version = "^2.0.20", optional=true }

# Container optional
gunicorn = { version = "^20.1.0", optional=true }

# GCP Deployment optionals
google-cloud-firestore = { version = "^2.4.0", optional=true }
google-cloud-storage = { version = "^2.2.1", optional=true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
deploy-here = ["pymongo", "uWSGI"]
deploy-compose = ["pymongo", "gunicorn"]
deploy-gcp = ["gunicorn", "google-cloud-firestore", "google-cloud-storage"]
